# CacheRefine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/ARC/: CacheARC.h  CacheARCLFUPart.h  CacheARCLRUPart.h  CacheARCNode.h
src/LFU/: CacheLFU.h  CacheLFUAvg.h  CacheLFUHash.h
src/LRU/: CacheLRU.h  CacheLRUHash.h  CacheLRUK.h
src/Utility/: CacheBase.h
